--- a/templates/specimen/nmodify.html
+++ b/templates/specimen/nmodify.html
@@ -331,9 +331,13 @@
               axios
               .post('/updatespc', this.spc)
               .then(res => {
-                console.log(res.data);
+                if (res.data == "ok")
+                  alert("Ok! The specimen was modified");
+                else
+                  alert("An error was occured");
               }).catch(function (err) {
                 console.log(err);
+                alert("An error was occured");
               });
             }
             e.preventDefault();
