--- a/templates/experiment/new.html
+++ b/templates/experiment/new.html
@@ -52,7 +52,7 @@
       </div>
       <ul class="c-sidebar-nav">
         <li class="c-sidebar-nav-item">
-          <a class="c-sidebar-nav-link" href="/main">
+          <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
             </svg> Dashboard
@@ -80,35 +80,35 @@
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a class="c-sidebar-nav-link" href="/main">
+          <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-chart-pie"></use>
             </svg> Predict
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a class="c-sidebar-nav-link" href="/main">
+          <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
             </svg> Compare
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a class="c-sidebar-nav-link" href="/main">
+          <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-calculator"></use>
             </svg> Algorithm
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a class="c-sidebar-nav-link" href="/main">
+          <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-star"></use>
             </svg> Online Analysis
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a class="c-sidebar-nav-link" href="/main">
+          <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bug"></use>
             </svg> Online Experiments
@@ -123,7 +123,7 @@
           <svg class="c-icon c-icon-lg">
             <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
           </svg>
-        </button><a class="c-header-brand d-lg-none" href="/main">
+        </button><a class="c-header-brand d-lg-none" href="main">
           <img width="140" height="46" alt="CloudLab Logo" src="/assets/brand/bit-cloud-lab.png">
         <button class="c-header-toggler c-class-toggler mfs-3 d-md-down-none" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true">
           <svg class="c-icon c-icon-lg">
@@ -131,57 +131,57 @@
           </svg>
         </button>
         <ul class="c-header-nav d-md-down-none">
-          <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="/main">Dashboard</a></li>
-          <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="/main">Users</a></li>
-          <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="/main">Settings</a></li>
+          <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="main">Dashboard</a></li>
+          <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="main">Users</a></li>
+          <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="main">Settings</a></li>
         </ul>
         <ul class="c-header-nav ml-auto mr-4">
-          <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="/main">
+          <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="main">
               <svg class="c-icon">
                 <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
               </svg></a></li>
-          <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="/main">
+          <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="main">
               <svg class="c-icon">
                 <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-list-rich"></use>
               </svg></a></li>
-          <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="/main">
+          <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="main">
               <svg class="c-icon">
                 <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
               </svg></a></li>
-          <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="/main" role="button" aria-haspopup="true" aria-expanded="false">
+          <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="main" role="button" aria-haspopup="true" aria-expanded="false">
               <div class="c-avatar"><img class="c-avatar-img" src="/assets/img/avatars/6.jpg" alt="user@email.com"></div>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
-              <div class="dropdown-header bg-light py-2"><strong>Account</strong></div><a class="dropdown-item" href="/main">
+              <div class="dropdown-header bg-light py-2"><strong>Account</strong></div><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
-                </svg> Updates<span class="badge badge-info ml-auto">42</span></a><a class="dropdown-item" href="/main">
+                </svg> Updates<span class="badge badge-info ml-auto">42</span></a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
-                </svg> Messages<span class="badge badge-success ml-auto">42</span></a><a class="dropdown-item" href="/main">
+                </svg> Messages<span class="badge badge-success ml-auto">42</span></a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-task"></use>
-                </svg> Tasks<span class="badge badge-danger ml-auto">42</span></a><a class="dropdown-item" href="/main">
+                </svg> Tasks<span class="badge badge-danger ml-auto">42</span></a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-comment-square"></use>
                 </svg> Comments<span class="badge badge-warning ml-auto">42</span></a>
-              <div class="dropdown-header bg-light py-2"><strong>Settings</strong></div><a class="dropdown-item" href="/main">
+              <div class="dropdown-header bg-light py-2"><strong>Settings</strong></div><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-user"></use>
-                </svg> Profile</a><a class="dropdown-item" href="/main">
+                </svg> Profile</a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-settings"></use>
-                </svg> Settings</a><a class="dropdown-item" href="/main">
+                </svg> Settings</a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-credit-card"></use>
-                </svg> Payments<span class="badge badge-secondary ml-auto">42</span></a><a class="dropdown-item" href="/main">
+                </svg> Payments<span class="badge badge-secondary ml-auto">42</span></a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-file"></use>
                 </svg> Projects<span class="badge badge-primary ml-auto">42</span></a>
-              <div class="dropdown-divider"></div><a class="dropdown-item" href="/main">
+              <div class="dropdown-divider"></div><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-lock-locked"></use>
-                </svg> Lock Account</a><a class="dropdown-item" href="/main">
+                </svg> Lock Account</a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
                   <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-account-logout"></use>
                 </svg> Logout</a>
@@ -191,7 +191,7 @@
         <div class="c-subheader px-3">
           <!-- Breadcrumb-->
           <ol class="breadcrumb border-0 m-0">
-            <li class="breadcrumb-item"><a href="/main">Home</a></li>
+            <li class="breadcrumb-item"><a href="main">Home</a></li>
             <li class="breadcrumb-item"><a href="/experiment/list">Experiments List</a></li>
             <li class="breadcrumb-item active">New Experiment</li>
             <!-- Breadcrumb Menu-->
@@ -360,9 +360,13 @@
               axios
               .post('/newexp', this.exp)
               .then(res => {
-                console.log(res.data);
+                if (res.data == "ok")
+                  alert("Ok! A new experiment was created");
+                else
+                  alert("An error was occured");
               }).catch(function (err) {
                 console.log(err);
+                alert("An error was occured");
               });
             }
             e.preventDefault();
