--- a/templates/material/list.html
+++ b/templates/material/list.html
@@ -243,9 +243,7 @@
                           <span class="badge badge-warning"><a v-bind:href="'/material/modify/' + mtr.mid">M</a></span>
                         </td>
                         <td>
-                          <span class="badge badge-secondary">
-                            <a href="#"v-bind:onclick="'confirmDelete(' + mtr.mid + ')'">D</a>
-                          </span>
+                          <button class="badge badge-secondary" @click="confirmDelete(mtr.mid)">D</button>
                         </td>
                       </tr>
                     </tbody>
@@ -284,6 +282,24 @@
         data: {
           materials: []
         },
+        methods: {
+          confirmDelete: function (mid) {
+            if (confirm('Are you sure?\nPress OK will delete the material! If you do not want to delte, press Cancel please!\nFor testing, Please delete your own test case, do not delete the original data, thank you!')) {
+            axios
+            .get('/delmtr/' + mid)
+            .then(res => {
+              // console.log(res.data);
+              if (res.data.message == "ok") {
+                alert("the material (id = " + mid + ") was deteleted");
+                window.location.reload(true);
+              }
+            })
+            .catch(err => {
+              console.log(err);
+            });
+          }
+        },
+      },
         mounted() {
           // verify_token();
           axios
@@ -298,23 +314,6 @@
         },
         delimiters: ['[[',']]']
       });
-
-      function confirmDelete(mid) {
-        if (confirm('Are you sure?\nPress OK will delete the material! If you do not want to delte, press Cancel please!\nFor testing, Please delete your own test case, do not delete the original data, thank you!')) {
-          axios
-          .get('/delmtr/' + mid)
-          .then(res => {
-            // console.log(res.data);
-            if (res.data.message == "ok") {
-              alert("the material (id = " + mid + ") was deteleted");
-            }
-          })
-          .catch(err => {
-            console.log(err);
-          });
-        }
-        
-      }
     </script>
 
   </body>
