--- a/templates/material/new.html
+++ b/templates/material/new.html
@@ -320,9 +320,13 @@
               axios
               .post('/newmtr', this.mtr)
               .then(res => {
-                console.log(res.data);
+                if (res.data == "ok")
+                  alert("Ok! A new material was created");
+                else
+                  alert("an error was occured");
               }).catch(function (err) {
                 console.log(err);
+                alert("bad");
               });
             }
             e.preventDefault();
