--- a/templates/material/new.html
+++ b/templates/material/new.html
@@ -320,7 +320,7 @@
               axios
               .post('/newmtr', this.mtr)
               .then(res => {
-                if (res.data == "ok")
+                if (res.data.message == "ok")
                   alert("Ok! A new material was created");
                 else
                   alert("an error was occured");
