--- a/templates/material/nmodify.html
+++ b/templates/material/nmodify.html
@@ -321,7 +321,7 @@
               axios
               .post('/updatemtr', this.mtr)
               .then(res => {
-                if (res.data == "ok")
+                if (res.data.message == "ok")
                   alert("Ok! The material was modified");
                 else
                   alert("An error was occured");
