--- a/templates/main.html
+++ b/templates/main.html
@@ -152,44 +152,8 @@
               <svg class="c-icon">
                 <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
               </svg></a></li>
-          <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="main" role="button" aria-haspopup="true" aria-expanded="false">
-              <div class="c-avatar"><img class="c-avatar-img" src="/assets/img/avatars/6.jpg" alt="user@email.com"></div>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right pt-0">
-              <div class="dropdown-header bg-light py-2"><strong>Account</strong></div><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
-                </svg> Updates<span class="badge badge-info ml-auto">42</span></a><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
-                </svg> Messages<span class="badge badge-success ml-auto">42</span></a><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-task"></use>
-                </svg> Tasks<span class="badge badge-danger ml-auto">42</span></a><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-comment-square"></use>
-                </svg> Comments<span class="badge badge-warning ml-auto">42</span></a>
-              <div class="dropdown-header bg-light py-2"><strong>Settings</strong></div><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-user"></use>
-                </svg> Profile</a><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-settings"></use>
-                </svg> Settings</a><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-credit-card"></use>
-                </svg> Payments<span class="badge badge-secondary ml-auto">42</span></a><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-file"></use>
-                </svg> Projects<span class="badge badge-primary ml-auto">42</span></a>
-              <div class="dropdown-divider"></div><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-lock-locked"></use>
-                </svg> Lock Account</a><a class="dropdown-item" href="main">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-account-logout"></use>
-                </svg> Logout</a>
-            </div>
+          <li class="c-header-nav-item dropdown">
+            <div class="c-avatar"><img class="c-avatar-img" src="/assets/img/avatars/6.jpg" alt="user@email.com"></div>
           </li>
         </ul>
         <div class="c-subheader px-3">
@@ -242,8 +206,8 @@
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                           <a class="dropdown-item" href="/material/content/1">Experiment</a>
-                          <!-- a class="dropdown-item" href="/material/analysis/1">Analysics</a -->
-                          <a class="dropdown-item" href="/prediction/1">Prediction</a></div>
+                          <a class="dropdown-item" href="/prediction/1">Prediction</a>
+                        </div>
                       </div>
                     </div>
                     <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
@@ -267,8 +231,8 @@
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                           <a class="dropdown-item" href="/material/content/2">Experiment</a>
-                          <!-- a class="dropdown-item" href="/material/analysis/2">Hysteresis Loops</a -->
-                          <a class="dropdown-item" href="/prediction/2">Prediction</a></div>
+                          <a class="dropdown-item" href="/prediction/2">Prediction</a>
+                        </div>
                       </div>                        
                     </div>
                     <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
